24-Dec-2011 Multiplatform Windows VisualStudio project generation will now enable builds for more than just the first platform specified, e.g. if -platforms=win32;win64 then only win32 would build in the IDE previously.

22-Dec-2011 Reordering library link order so that project libraries come first, then specified external libraries, then system libraries. This appears to resolve inter-dynamic-library dependencies in Gcc-4.5 upwards when --as-needed is specified to ld.

21-Dec-2011 Fixing system include paths for Gcc-4.4, 4.5 and 4.6 for Ubuntu 11.10.

21-Dec-2011 Adding Gcc-4.5 support for Linux. A new include path under /usr/include needed to be added.

21-Dec-2011 Only adding quotes around paths and filenames when they contain spaces.

21-Dec-2011 Removing some extranous spaces in commands.

21-Dec-2011 Adding Gcc-4.6 support for Linux. A new include path under /usr/include needed to be added.

18-Oct-2011 Issue 52. Fixed Gcc include-fixed paths.

04-Oct-2011 Used some OpenCL preprocessor magic (__NO_STD_VECTOR) to avoid the use of std::vector in the test program. Also added support to the test if there was a GPU OpenCL device but not a CPU device.

02-Oct-2011 Issue 49. Added EnableAutoImport linker option to Mingw. See http://sourceware.org/binutils/docs-2.16/ld/WIN32.html

02-Oct-2011 Issue 48. Scheduler updates are now reported via a C# event and only when percentage completion has changed.

02-Oct-2011 Fixed Mingw-4.5.0 compilation.

02-Oct-2011 Removing obsolete spaces at the end of command line arguments.

25-Sep-2011 Issue 40. VisualStudio 2010 source files in the IDE Solution Explorer appeared as a flat list. Opus now generates .vcxproj.filters files alongside the project files to remedy this.

25-Sep-2011 Issue 47. If the Windows SDK (6.0A) is not found, then the VisualStudio install path is searched for a PlatformSDK. This is really only suitable for VisualStudio 8.
